# libb-goog

./: .gitignore  README.md  pyproject.toml
src/goog/: __init__.py  base.py  calendar.py  drive.py  gmail.py  sheets.py
tests/: conftest.py  test_base.py  test_calendar.py  test_drive.py  test_fmt.py  test_gmail.py  test_sheets.py
tests/fixtures/: drive_responses.py
tests/fixtures/data/: files_copy.json  files_create_file.json  files_create_folder.json  files_create_subfolder.json  files_get_metadata.json  files_get_parents.json  files_get_parents_folder.json  files_list_file_lookup.json  files_list_folder.json  files_list_folder_lookup.json  files_list_root_page1.json  files_list_root_page2.json  files_list_search.json  files_update_move.json  files_update_move_folder.json  files_update_move_folder_blocked.json  files_update_rate_limit_exceeded.json
